# agentic-poc

./: _clean.sh
ag-agent/autogen-notebooks/agentchat-user-guide/: quickstart.ipynb
ag-agent/autogen-notebooks/agentchat-user-guide/tutorial/: 1-models.ipynb  2-messages.ipynb  3-agents.ipynb  4-teams.ipynb  5-human-in-the-loop.ipynb  6-termination.ipynb  7-custom-agents.ipynb  8-state.ipynb  team_state.json
ag-agent/autogen-notebooks/core-user-guide/: quickstart.ipynb
ag-agent/autogen-notebooks/core-user-guide/cookbook/: langgraph-agent.ipynb  local-llms-ollama-litellm.ipynb
ag-agent/autogen-notebooks/core-user-guide/design-patterns/: group-chat.ipynb  reflection.ipynb  sequential-workflow.ipynb
ag-agent/experimental/: GroupChat.py  autogen-mysql.py  autogen-qs.py  pyproject.toml  run-agent.sh  set_api_keys.sh  sqlite.py
ag-agent/experimental/conjur-setup/: 1-start-jwt-this.sh
autogen/: autogen-qs.py  pyproject.toml  run-agent.sh
autogen/conjur-setup/: .token
conjur-service/: 1-start-svc.sh  2-get-secret.sh  conjur-service.py  pyproject.toml
conjur-service/conjur-setup/: .token
experimental/: langchain-chatmistral.py  langchain-selfhosted.py  langgraph-self.py
k8s-bot/: main.py
k8s-bot/k8s_bot/: graph_main.py
lc-chatbot/: API_agent_chatbot.py  open_API_agent.py  pyproject.toml
lg-agent-docker/: 1-start.sh  agent-vars.sh  conjurjwt.py  exec-into-bot.sh  lg-mysql.py  mysql-test.py  pyproject.toml  stop
lg-agent-docker/conjur-setup/: .token
lg-agent-k8s/: 1-start.sh  agent-vars.sh  exec-into-agent.sh  lg-agent-manifest.yaml  stop
lg-agent-k8s/conjur-setup/: 1-config-jwt-authn.sh  demo-vars.sh
mysql/: 1-deploy-mysql.sh  2-delete-mysql.sh  exec-to-mysql-as-root.sh  exec-to-mysql-as-user.sh  init_mysql.sh  mysql-vars.sh  mysqldb-grant-user-access.sh
mysql/db-test/: exec-to-mysql.sh  mysql-test.py  q-1r-rf.sql  run-in-mysql.sh
mysql/manifests/: mysql-manifest.yaml
mysql/templates/: mysql-manifest.template.yaml
openapi/conjur-ent-openapi/: conjur-ent-oas.py  pyproject.toml
openapi/event-mgmt/: example-events.json  openapi-test.py  pyproject.toml
openapi/petstore/: openapi-test.py  petstore.json  petstore.py  pyproject.toml  run.sh
setup/: 0-ubuntu-update.sh  1-python-setup.sh  3-run-jupyter.sh  4-install-k8s.sh  5-start-minikube.sh
