[tool.poetry]
name = "ag-agent"
version = "0.1.0"
description = ""
authors = ["jodyhuntatx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.14"
autogen-agentchat = "^0.4.2"
autogen-ext = {extras = ["azure", "openai"], version = "^0.4.2"}
logging = "^0.4.9.6"
langchain-community = "^0.3.14"
mysql-connector-python = "^9.1.0"
path = "^17.1.0"
autogen = "^0.7.1"
langchain-experimental = "^0.3.4"
flaml = {extras = ["automl"], version = "^2.3.3"}
langchain-openai = "^0.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
