[tool.poetry]
name = "openapi"
version = "0.1.0"
description = ""
authors = ["jodyhuntatx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jsonref = "^1.1.0"
openai = "^1.59.7"
requests = "^2.32.3"
keyring = "^25.6.0"
keyrings-alt = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
