[tool.poetry]
name = "petstore"
version = "0.1.0"
description = ""
authors = ["jodyhuntatx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openapi-core = "^0.19.4"
jsonref = "^1.1.0"
openai = "^1.59.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
